## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

dvbstreamer_includedir = $(pkgincludedir)/dvbstreamer

dvbstreamer_include_DATA = \
    cache.h \
    services.h \
    multiplexes.h \
    dvb.h \
    main.h \
    plugin.h \
    types.h \
    ts.h \
    logging.h \
    list.h \
    commands.h \
    deliverymethod.h


EXTRA_DIST = $(dvbstreamer_include_DATA)

